Draft Models define
